[package]
name = "rslt"
version = "0.1.0"
authors = ["Nathan Fisher <jeang3nie@hitchhiker-linux.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
